
--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
........S. [ZBXNEXT-2069] added HOST.PORT macro support for internal and trigger based notifications (wiper)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Japanese, Russian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-7288] improved error logging for server-proxy communication (Andris)
A.F....... [ZBX-7407] fixed being able to change event source for existing actions (Ivo)
...G...PS. [ZBX-7392] fixed memory leaks in gnuregex.c (igors)
........S. [ZBX-7397] reduced value cache memory usage (wiper)
........S. [ZBX-7516] fixed typo in SQL query: changed "impi_disable_until" to "ipmi_disable_until" (asaveljevs)
A......... [ZBX-7509] changed "value_flag" to proper name "value_flags" in triggers API (Ivo)
..F....... [ZBX-7489] changed "filter_set" to no longer require SID parameter in URL (Ivo)
..F....... [ZBX-7486] fixed placeholder default value submitting for IE (Ivo)
..F....... [ZBX-7438] made frontend object status update messages more consistent (Ivo)
A.F....... [ZBX-7445] fixed frontend redundant call of history (Eduard)
....I..... [ZBX-7227] modernized autoconf invocation and renamed "configure.in" to "configure.ac"; thanks to Dmitry Smirnov (asaveljevs)
..F....... [ZBX-7443] fixed adding screen to favourites from dashboard (Eduard)
..F....... [ZBX-7490] fixed chart with prototype items displaing in graphs configuration page (Eduard)
A......... [ZBX-7454] fixed automatic changing host inventory mode from "Automatic" to "Manual" when updating host with no "inventory_mode" parameter set (Ivo)
..F....... [ZBX-7417] expanded function last() with no parameters in map element labels and graph names (Ivo)
A......... [ZBX-7338] fixed screen item validation (Eduard)
..F....... [ZBX-7427] fixed element links not being rendered correctly between host groups and other elements (Pavels)
