@@ -324,12 +324,13 @@ class CHttpTest extends CZBXAPI {
 			$dbTest = $dbHttpTests[$httpTest['httptestid']];
 			$test['hostid'] = $dbTest['hostid'];
 
-			if (!empty($dbTest['templateid']) || empty($test['name'])) {
+			if (!isset($test['name']) || zbx_empty($test['name']) || !empty($dbTest['templateid'])) {
 				$test['name'] = $dbTest['name'];
 			}
 			if (!empty($test['steps'])) {
 				foreach ($test['steps'] as $snum => $step) {
-					if (isset($step['httpstepid']) && (!empty($dbTest['templateid']) || empty($step['name']))) {
+					if (isset($step['httpstepid'])
+							&& (!empty($dbTest['templateid']) || !isset($step['name']) || zbx_empty($step['name']))) {
 						$test['steps'][$snum]['name'] = $dbTest['steps'][$step['httpstepid']]['name'];
 					}
 					if (!empty($dbTest['templateid'])) {
